@@ -1,7 +1,32 @@
+# Requirement : <a href="https://gluonhq.com/products/javafx/"> JavaFX SDK, JDK 23, SceneBuilder For Editing<a>
 # Must use JDK 23 for running JAR File 
-# .bat file command for run.bat java 
+# .bat file command for run.bat 
+```txt
+--module-path path\javafx\lib --add-modules javafx.controls,javafx.fxml -jar JarFileName.jar
+```
+
 
 # VM Argument For Mac/Linux: 
+
 ```txt
 --module-path path\javafx\lib --add-modules javafx.controls,javafx.fxml
+```
+
+# VM Argument For Windows:
+```txt
+--module-path "\path\to\javafx-sdk-23.0.1\lib" --add-modules javafx.controls,javafx.fxml
+```
+
+# CSS For FXML
+`Primary Button: `
+```txt
+#0284c7
+```
+`Warning Button:`
+```txt
+#FF5733
+```
+`Success Message`
+```txt
+#0af02d
 ```
